WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152634
[SOUP] REGRESSION(
r192761
): Broke resource URIs for applications that use g_resource_load in a web extension
https://bugs.webkit.org/show_bug.cgi?id=152634
Summary
[SOUP] REGRESSION(r192761): Broke resource URIs for applications that use g_r...
Michael Catanzaro
Reported
2015-12-31 20:35:46 PST
Now that network process is mandatory, applications that were using the default WEBKIT_PROCESS_MODEL_SHARED_SECONDARY_PROCESS to allow injecting GResources into the web process have been seriously broken, since the loads occur in the network process but the resources were injected into the web process. I'm kind of surprised that we support resource URIs, actually (did we somehow inherit that accidentally from libsoup?), but it's a nice feature, so let's keep it working by handling resource URIs in the web process rather than the network process, same as we already do for data URIs and QuickLook URIs (whatever those are ;)
Attachments
Patch
(7.42 KB, patch)
2015-12-31 20:51 PST
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2015-12-31 20:51:53 PST
Created
attachment 268066
[details]
Patch
Carlos Garcia Campos
Comment 2
2016-01-01 01:13:07 PST
Comment on
attachment 268066
[details]
Patch Excellent
WebKit Commit Bot
Comment 3
2016-01-01 13:22:42 PST
Comment on
attachment 268066
[details]
Patch Clearing flags on attachment: 268066 Committed
r194480
: <
http://trac.webkit.org/changeset/194480
>
WebKit Commit Bot
Comment 4
2016-01-01 13:22:45 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug