Source/WebKit2/WebProcess/Network/WebLoaderStrategy.cpp
@@ -160,6 +160,16 @@ void WebLoaderStrategy::scheduleLoad(ResourceLoader* resourceLoader, CachedResou
     }
 #endif
 
+#if USE(SOUP)
+    // For apps that call g_resource_load in a web extension.
+    // https://blogs.gnome.org/alexl/2012/01/26/resources-in-glib/
+    if (resourceLoader->request().url().protocolIs("resource")) {
+        LOG(NetworkScheduling, "(WebProcess) WebLoaderStrategy::scheduleLoad, url '%s' will be handled as a GResource.", resourceLoader->url().string().utf8().data());
+        startLocalLoad(*resourceLoader);
+        return;
+    }
+#endif
+
     LOG(NetworkScheduling, "(WebProcess) WebLoaderStrategy::scheduleLoad, url '%s' will be scheduled with the NetworkProcess with priority %d", resourceLoader->url().string().utf8().data(), static_cast<int>(resourceLoader->request().priority()));
 
     ContentSniffingPolicy contentSniffingPolicy = resourceLoader->shouldSniffContent() ? SniffContent : DoNotSniffContent;
